# python_auto_trader

./: .clasp.json  .claspignore  .gitignore  Auth.gs  CompatWrappers.gs  Config.gs  DataEngine.gs  Indicators.gs  Maintenance.gs  MarketBrain.gs  MasterRunner.gs  OrderEngine.gs  RiskEngine.gs  ScoreEngine.gs  TestHarness.gs  Universe.gs  UpstoxOAuth.gs  backup_snapshot.sh  clasp24.sh  release_push.sh  restore_snapshot.sh
gcp_autotrader/: .dockerignore  Dockerfile  Dockerfile.ws  Makefile  README.md  cloudbuild.ws.yaml  cloudbuild.yaml  pyproject.toml  requirements.txt
gcp_autotrader/deploy/: create_scheduler_jobs.sh  deploy_cloud_run.sh  run_fresh_universe_score_flow.sh  run_intraday_backfill_appended_5m.sh  run_intraday_backfill_full_5m.sh  run_intraday_update_close_5m.sh  run_last_candle_update.sh  run_score_generation.sh  run_universe_rebuild_backfill.sh  run_watchlist_generation.sh
gcp_autotrader/docs/: ARCHITECTURE.md  GCP_PRODUCTION_SETUP.md  PM_Autotrader_Flow_Guide.txt  TRADING_SYSTEM_ENHANCEMENT_GUIDE.md  UNIVERSE_RAW_FETCH_AND_BUILD_ALGORITHM.md  Universe_Score_Watchlist_Algorithm_Guide.txt
gcp_autotrader/tests/: fixtures_universe_v2.py  test_analytics_token_auth.py  test_api_watchlist_logging.py  test_batch1_life_support.py  test_batch2_safety_rails.py  test_batch3_swing_revival.py  test_batch4_calibration.py  test_batch5_capability_expansion.py  test_batch6_polish.py  test_batch7_cleanup.py  test_indicators.py  test_m0_safety_net.py  test_m1_exit_fsm.py  test_m2_playbook_edge.py  test_m3_expected_edge.py  test_m4_portfolio_book.py  test_m6_attribution.py  (+14 more)
(+134 files in other folders)
